refactor(project): update layout logic to use grid in a more modular way

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
   </header>
   
   <!-- Área principal com a galeria -->
-  <main class="gallery">
-    <div class="gallery-item">
-      <img src="/img/Carro1.jpg" alt="Carro">
-    </div>
-    <div class="gallery-item">
-        <img src="/img/Carro2.jpg" alt="Carro">
+  <main>
+    <div class="gallery1">
+      <div class="gallery-item item-a">
+        <img src="/img/Carro1.jpg" alt="Carro">
       </div>
-      <div class="gallery-item">
+      <div class="gallery-item item-b">
+          <img src="/img/Carro2.jpg" alt="Carro">
+      </div>
+      <div class="gallery-item item-c">
         <img src="/img/Carro3.jpg" alt="Carro">
       </div>
+    </div>
+
+    <div class="gallery2">
       <div class="gallery-item">
         <img src="/img/Carro4.jpg" alt="Carro">
       </div>
@@ -31,6 +35,7 @@
       <div class="gallery-item">
         <img src="/img/Carro6.jpg" alt="Carro">
       </div>
+    </div>
   </main>
   
   <footer>
